--- a/star-wars-challenge/package.json
+++ b/star-wars-challenge/package.json
@@ -23,12 +23,14 @@
     "@remix-run/serve": "^2.8.1",
     "@tanstack/react-table": "^8.15.3",
     "axios": "^1.6.8",
+    "chart.js": "^4.4.4",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
     "cmdk": "^1.0.0",
     "isbot": "^4.1.0",
     "lucide-react": "^0.363.0",
     "react": "^18.2.0",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^5.0.1",
     "tailwind-merge": "^2.2.2",
